@startuml

title __Model JSON's Class Diagram__\n
    namespace com.mareena.mediacatalogue {
      namespace model.json {
        class com.mareena.mediacatalogue.model.json.Film {
            {static} + MAX_ID : int
            # director : int
            - fid : int
            + Film()
            + Film()
            + getDirector()
            + getFid()
            + setDirector()
            + setFid()
            + setMediaCreator()
            ~ getNextID()
        }
      }
    }



    namespace com.mareena.mediacatalogue {
      namespace model.json {
        class com.mareena.mediacatalogue.model.json.Genre {
            {static} + MAX_ID : int
            - genre : String
            - gid : int
            + Genre()
            + Genre()
            + Genre()
            + getGenre()
            + getGid()
            + setGenre()
            + setGid()
            + toString()
            ~ getNextID()
        }
      }
    }

  

    namespace com.mareena.mediacatalogue {
      namespace model.json {
        abstract class com.mareena.mediacatalogue.model.json.Media {
            # actors : Set<People>
            # cast : Set<Integer>
            # description : String
            # genre : Set<Integer>
            # genres : Set<Genre>
            # title : String
            # year : Integer
            + Media()
            + compareTo()
            + getActors()
            + getCast()
            + getDescription()
            + getGenre()
            + getGenres()
            + getMediaCreator()
            + getTitle()
            + getYear()
            + setAppModel()
            + setCast()
            + setCastByName()
            + setDescription()
            + setGenre()
            + setGenreByName()
            {abstract} + setMediaCreator()
            + setTitle()
            + setYear()
            + toString()
            + toStringforListByGenre()
            + toStringforListByYear()
            ~ getSeperatedGenres()
        }
      }
    }


    namespace com.mareena.mediacatalogue {
      namespace model.json {
        class com.mareena.mediacatalogue.model.json.MediaCatalogue {
            - films : List<Film>
            - genres : List<Genre>
            - people : List<People>
            - profiles : List<Profile>
            - tvseries : List<TVSeries>
            + MediaCatalogue()
            + getFilms()
            + getGenres()
            + getPeople()
            + getProfiles()
            + getTvseries()
            + setFilms()
            + setGenres()
            + setPeople()
            + setProfiles()
            + setTvseries()
            + toString()
            + updateCastAndGenreInMediaModel()
        }
      }
    }

    namespace com.mareena.mediacatalogue {
      namespace model.json {
        class com.mareena.mediacatalogue.model.json.People {
            {static} + MAX_ID : int
            - name : String
            - pid : int
            + People()
            + People()
            + getName()
            + getPid()
            + setName()
            + setPid()
            + toString()
            ~ getNextID()
        }
      }
    }
  

    namespace com.mareena.mediacatalogue {
      namespace model.json {
        class com.mareena.mediacatalogue.model.json.Profile {
            - name : String
            - preferredGenre : int
            + Profile()
            + getName()
            + getPreferredGenre()
            + setName()
            + setPreferredGenre()
            + toString()
        }
      }
    }
  

    namespace com.mareena.mediacatalogue {
      namespace model.json {
        class com.mareena.mediacatalogue.model.json.TVSeries {
            {static} + MAX_ID : int
            # creator : int
            - tid : int
            + TVSeries()
            + TVSeries()
            + getCreator()
            + getTid()
            + setCreator()
            + setMediaCreator()
            + setTid()
            ~ getNextID()
        }
      }
    }
  

  com.mareena.mediacatalogue.model.json.Film -up-|> com.mareena.mediacatalogue.model.json.Media
  com.mareena.mediacatalogue.model.json.Media .up.|> java.lang.Comparable
  com.mareena.mediacatalogue.model.json.Media o-- com.mareena.mediacatalogue.model.json.People : mediaCreator
  com.mareena.mediacatalogue.model.json.TVSeries -up-|> com.mareena.mediacatalogue.model.json.Media


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
